--- a/popup.html
+++ b/popup.html
@@ -8,36 +8,81 @@
     body {
       font-family: Arial, sans-serif;
       margin: 10px;
+      text-align: center;
     }
 
-    label {
-      display: block;
-      margin-bottom: 10px;
+    .switch {
+      position: relative;
+      display: inline-block;
+      width: 60px;
+      height: 34px;
     }
 
-    input[type="checkbox"] {
-      margin-right: 5px;
+    .switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      transition: .4s;
+      border-radius: 34px;
+    }
+
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 26px;
+      width: 26px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      transition: .4s;
+      border-radius: 50%;
+    }
+
+    input:checked + .slider {
+      background-color: #2196F3;
+    }
+
+    input:focus + .slider {
+      box-shadow: 0 0 1px #2196F3;
+    }
+
+    input:checked + .slider:before {
+      transform: translateX(26px);
+    }
+
+    .footer {
+      margin-top: 20px;
+      font-size: 0.8em;
+      text-align: center;
+    }
+
+    .footer a {
+      color: #0000EE;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
-  <label>
+  <label class="switch">
     <input type="checkbox" id="toggleSwitch">
-    Enable Extension
+    <span class="slider"></span>
   </label>
 
-  <script>
-    // Save the current state of the extension in Chrome storage
-    document.getElementById('toggleSwitch').addEventListener('change', function() {
-      const isEnabled = this.checked;
-      chrome.storage.sync.set({ isEnabled: isEnabled });
-    });
+  <div class="footer">
+    <p>Disclaimer: This extension is for educational purposes only.</p>
+    <p>Author: <a href="https://github.com/cprite" target="_blank">cprite</a></p>
+  </div>
 
-    // Retrieve the current state of the extension from Chrome storage
-    chrome.storage.sync.get('isEnabled', function(data) {
-      const isEnabled = data.isEnabled;
-      document.getElementById('toggleSwitch').checked = isEnabled;
-    });
-  </script>
+  <script src="popup.js"></script>
 </body>
 </html>
