--- a/extension/warning.html
+++ b/extension/warning.html
@@ -64,7 +64,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="images/warning.png" alt="Warning Icon">
+        <img src="../images/warning.png" alt="Warning Icon">
         <h1>Phishing Warning!</h1>
         <p>This website may be a phishing site. Proceed with caution.</p>
         <button id="proceedBtn">Proceed to URL</button>
